done create folder

--- a/src/web/css/main.css
+++ b/src/web/css/main.css
@@ -425,7 +425,7 @@ div.ui-tooltip {
     padding: 5px 15px;
 }
 
-.pnlDirs .list-group-item:first-child {
+.pnlDirs .list-group-item:first-child, .pnlDirs .list-group-item:last-child {
     border-radius: 0;
 }
 
