--- a/src/web/css/roxy.css
+++ b/src/web/css/roxy.css
@@ -7,6 +7,12 @@ body {
     height: 100%;
     width: 100%;
     overflow: hidden;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 a {
@@ -182,4 +188,24 @@ section.footer {
 .folder-list {
     overflow-y: auto;
     height: 370px;
+}
+
+.context-menu-item span {
+    margin-left: 15px;
+}
+
+.context-menu-item {
+    padding: 10px;
+}
+
+.context-menu-list {
+    z-index: 9;
+}
+
+.context-menu-separator {
+    padding: 0 !important;
+}
+
+.progress {
+    margin: 10px;
 }
